Bug 345127 - No change of background diagram color possible
Summary: No change of background diagram color possible
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.10.5
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL: https://bazaar.launchpad.net/~avaneya...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-13 20:59 UTC by Ralf Habacker
Modified: 2015-04-17 21:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.95 (KDE Applications 15.03.95)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-03-13 20:59:47 UTC
The appended xmi file sets black diagram background and white widget text. 
After loading the diagram the diagram background is still white.



Reproducible: Always

Steps to Reproduce:
1. start umbrello
2.  open xmi file from the bug url


Actual Results:  
The diagram background is still white

Expected Results:  
The diagram should show the black background loaded from the xmi file.
Comment 1 Ralf Habacker 2015-03-13 21:03:11 UTC
Git commit 70f08f1ba0bf5c17737870f3bd6fd669970b56f0 by Ralf Habacker.
Committed on 13/03/2015 at 21:00.
Pushed by habacker into branch 'Applications/15.04'.

Fix 'No change of background diagram color possible'.
FIXED-IN:2.15.95 (KDE 15.03.95)

M  +1    -0    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/70f08f1ba0bf5c17737870f3bd6fd669970b56f0
Comment 2 Ralf Habacker 2015-03-16 21:11:06 UTC
Git commit 879f49b6ba3abb1cd213b84102e28ec2219648c6 by Ralf Habacker.
Committed on 13/03/2015 at 21:00.
Pushed by habacker into branch 'master'.

Fix 'No change of background diagram color possible'.
FIXED-IN:2.15.95 (KDE 15.03.95)

M  +1    -0    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/879f49b6ba3abb1cd213b84102e28ec2219648c6
Comment 3 Ralf Habacker 2015-03-16 21:11:06 UTC
Git commit 2e9784bf333d5e99ae7fa529396d8f8a641c42d2 by Ralf Habacker.
Committed on 15/03/2015 at 21:13.
Pushed by habacker into branch 'master'.

Fix bug not showing correct scene background color in scene dialog.

The bug is fixed by:
- cleanup UMLScene related code in class UMLWidgetStylePage
- fix background and grid color setting in class UMLScene
FIXED-IN:2.15.95 (KDE 15.03.95)

M  +31   -22   umbrello/dialogs/pages/umlwidgetstylepage.cpp
M  +3    -0    umbrello/dialogs/pages/umlwidgetstylepage.h
M  +1    -9    umbrello/dialogs/umlviewdialog.cpp
M  +4    -4    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/2e9784bf333d5e99ae7fa529396d8f8a641c42d2