Fix 'No change of background diagram color possible'.

BUG:345127
FIXED-IN:2.15.95 (KDE 15.03.95)